# crtp-benchmarks

./: .gitmodules  CMakeLists.txt  CMakeSettings.json
bench/: bench.cpp
include/: crtp.hpp  crtp_concept.hpp  poly.hpp
src/: poly.cpp
test/: bench_test.cpp
